css/style.css
body {
	color: #eee;
	background-color: #05050a;
	max-width: 720px;
	margin: 0 auto;
	padding: 90px 0;
	line-height: 1.4em;
	font-size: 20px;
}

body, code, pre, kbd, h1, h2, h3, h4, h5 {
	font-family: Consolas, Inconsolata, monospace;
}

a {
	color: #FFEEBB;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

body > pre:first-child {
	line-height: 1em;
}

body > h2:first-child {
	margin-top: 30px;
}

h1 {
	font-size: 3em;
	line-height: 1.4em;
	color: #CC2266;
	margin-bottom: 45px;
}

h2 {
	font-size: 1.3em;
	line-height: 1.4em;
	margin-bottom: 30px;
	margin-top: 90px;
}

h3 {
	font-size: 1.1em;
}

h1, h2, h3, h4 {
	font-family: "Space Mono", monospace;
	font-weight: bold;
	color: #CC2266;
}

h3, h4, h5 {
	font-weight: normal !important;
}

ul {
	list-style-type: none;
	margin-left: 15px;
}

ol {
	margin-left: 15px;
}

ul li:before {
	content: '–';
	color: #CC2266;
	position: absolute;
	margin-left: -20px;
}

li > strong:first-child {
	color: #BBFFEE;
}

code {
	color: #BBFFEE;
	white-space: nowrap;
}

pre {
	margin-left: 30px;
}

pre code {
	white-space: pre-wrap;
}

strong {
	font-weight: 900;
}

video, img {
	border: 1px solid #888;
	margin: 30px 0;
	outline: none;
}

kbd {
	border: 1px solid white;
	padding: 2px 5px 2px 5px;
	border-radius: 5px;
	border-bottom-width: 2px;
	color: #BBFFEE;
	border-color: #BBFFEE;
	text-align: center;
	font-style: normal;
	font-size: 0.9em;
}

blockquote {
	border: 1px solid #CC2266;
	font-size: 0.9em;
	padding: 15px;
	margin: 30px 0px 30px 0;
}

blockquote > p:first-child > strong:first-child {
	color: #CC2266;
}

blockquote p:first-child {
	margin-top: 0;
}
blockquote p:last-child {
	margin-bottom: 0;
}

blockquote a:only-child {
	display: block;
	text-align: center;
}

#logo {
	position: fixed;
	left: 0;
	top: 0;
}

#logo img {
	border: none;
	margin: 15px;
	width: 32px;
	height: 32px;
}

.github {
	display: none;
}
.github img {
	border: none;
	margin: 15px;
}

::selection {
	background: #999999;
}

@media
only screen and (max-device-width: 720px),
only screen and (max-width: 720px) {
	body {
		font-size: 16px;
		width: 100%;
		padding-top: 0;
	}
	body > p, h1, h2, h3, h4, blockquote {
		margin-left: 15px;
		margin-right: 15px;
	}
	h1 {
		font-size: 2.4em !important;
		margin-bottom: 45px !important;
	}
	h2 {
		margin-top: 45px;
	}
	video {
		height: auto;
		width: 100%;
		border-left: none;
		border-right: none;
	}
	img[src="gifs/demo.gif"] {
		width: 100%;
	}
	.github {
		display: none !important;
	}
	#logo {
		position: static;
	}
}

/*******************************************************/

#index {
	max-width: 640px;
}

#index h1 {
	font-size: 54px;
}

#index ul li:before {
	content: '\2192';
	margin-left: -24px;
}

#index ul {
	padding-left: 24px;
}

#index hr {
	border: none;
	margin: 30px 0;
}

#index .github {
	display: block;
	position: fixed;
	top: 0;
	right: 0;
}

#index nav {
	padding: 0 0px;
	margin-bottom: 48px;
	opacity: 0.5;
}
#index nav:hover {
	opacity: 1.0;
}
#index nav a:not(:last-child) {
	margin-right: 32px;
}
#index nav a {
	color: grey;
}
#index nav img {
	margin: 0;
	border: none;
	width: 1em;
	height: 1em;
	vertical-align: text-top;
}

